--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "slidev-theme-dracula": "^0.2.0"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.41.2"
   }
 }
