--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build -- --base /docker_slides/
+        run: npm run build -- --base /chrome_devtools_slides/
 
       - uses: actions/configure-pages@v4
 
